# proton-drive-rust-personal-test

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md
.github/workflows/: rust.yml
docs/: IMPLEMENTATION-STATUS.md  PRD-MVP-completion.md  PRD-rust-port-and-tui.md  domain-model-mvp.md  domain-model.md
docs/adr/: 0000-template.md  0001-port-from-js-sdk.md  0002-rpgp-crypto-backend.md  0003-in-memory-cache-defer-sqlite.md  0004-tui-stack-ratatui.md  0005-trait-injected-dependencies.md  0006-seipdv1-default-aead-deferred.md  0007-personal-use-no-distribution.md  0008-block-upload-protocol.md  0009-block-download-protocol.md  0010-session-lifecycle-and-refresh.md  0011-zeroize-secret-material.md  0012-wire-format-validation.md  README.md
reference/cs/sdk/src/Proton.Drive.Sdk/Api/Shares/: ShareResponse.cs
rust/: Cargo.toml  README.md
rust/apps/pdtui/: Cargo.toml
rust/apps/pdtui/src/: account.rs  app.rs  auth.rs  http.rs  keymap.rs  lib.rs  main.rs  mvp.rs  panes.rs  probe.rs  session.rs  transfer.rs  ui.rs
rust/apps/pdtui/tests/: auth_integration.rs
rust/crates/proton-drive/: Cargo.toml
rust/crates/proton-drive-api/: Cargo.toml  build.rs
rust/crates/proton-drive-api/src/: events.rs  lib.rs
rust/crates/proton-drive-cache/: Cargo.toml
rust/crates/proton-drive-cache/src/: lib.rs
rust/crates/proton-drive-core/: Cargo.toml
rust/crates/proton-drive-core/src/: account.rs  client.rs  config.rs  download.rs  error.rs  events.rs  http.rs  lib.rs  nodes.rs  photos.rs  upload.rs
rust/crates/proton-drive-crypto/: Cargo.toml
rust/crates/proton-drive-crypto/src/: lib.rs
rust/crates/proton-drive-crypto/tests/: wire_format.rs  wire_roundtrip.mjs
rust/crates/proton-drive-telemetry/: Cargo.toml
rust/crates/proton-drive-telemetry/src/: lib.rs
rust/crates/proton-drive/src/: lib.rs
scripts/: README.md  configure-session.sh  js-probe.mjs  run-probes.sh  setup.sh
tests/fixtures/wire/: README.md  generate.mjs  key_priv.asc  key_pub.asc  package-lock.json  package.json  seipdv1_signed.meta.json  signer_priv.asc  signer_pub.asc
