[workspace]
resolver = "3"
members = [
    "crates/proton-drive",
    "crates/proton-drive-core",
    "crates/proton-drive-api",
    "crates/proton-drive-crypto",
    "crates/proton-drive-cache",
    "crates/proton-drive-telemetry",
    "apps/pdtui",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["DreamLab AI"]
publish = false

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"

[workspace.dependencies]
async-trait = "0.1"
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive", "derive"] }
base64 = "0.22"
bytes = "1"
dashmap = "6"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"

# Workspace-local crate deps
proton-drive-api = { path = "crates/proton-drive-api" }
proton-drive-cache = { path = "crates/proton-drive-cache" }
proton-drive-core = { path = "crates/proton-drive-core" }
proton-drive-crypto = { path = "crates/proton-drive-crypto" }
proton-drive-telemetry = { path = "crates/proton-drive-telemetry" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
