[package]
name = "pdtui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Two-pane TUI for Proton Drive — personal use"

[lints]
workspace = true

[lib]
name = "pdtui"
path = "src/lib.rs"

[[bin]]
name = "pdtui"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
crossterm = "0.28"
keyring = "3"
rand.workspace = true
ratatui = "0.29"
reqwest.workspace = true
rpassword = "7"
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
zeroize.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "macros", "sync", "io-util", "fs"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror.workspace = true
proton-drive = { path = "../../crates/proton-drive" }
proton-drive-api = { path = "../../crates/proton-drive-api" }
proton-drive-crypto = { path = "../../crates/proton-drive-crypto" }
