[package]
name = "proton-drive-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Proton Drive SDK — JSON DTOs (happy-path subset)"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
