[package]
name = "proton-drive-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Proton Drive SDK — cache trait + in-memory impl"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
