[package]
name = "proton-drive-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Proton Drive SDK — telemetry sink trait"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
