[package]
name = "proton-drive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Proton Drive SDK — Rust port (personal use)"

[lints]
workspace = true

[dependencies]
proton-drive-core.workspace = true
proton-drive-cache.workspace = true
proton-drive-crypto.workspace = true
proton-drive-telemetry.workspace = true
